# tbd-editor

./: Cargo.toml  LICENSE  README.md
prelude/: Cargo.toml
prelude/src/: functor.rs  iter.rs  lib.rs  macros.rs  monad.rs  result.rs  tap.rs
src/: app.rs  main.rs
