[package]
name = "tbd-editor"
version = "0.1.0"
authors = ["Orion Kindel <orion.kindel@integrate.com>"]
edition = "2018"

[workspace]
members = ["prelude"]

[dependencies]
termion = {version = "1.5.6"}
tui     = {version = "0.14.0"}
prelude = {path    = "prelude"}
clap    = {version = "3.0.0-beta.2"}
